--- a/Birdgram/.env.shared
+++ b/Birdgram/.env.shared
@@ -1,6 +1,13 @@
 # Shared config env (see bin/xcode-pre-action-gen-env-file)
 # vi: ft=sh
 
+# Version and build
+# - version must increment on each release
+# - (version, build) must increment on each upload
+# - https://stackoverflow.com/a/38009895
+export APP_VERSION='0.0.1' # Bump to release
+export APP_VERSION_BUILD="`"$BIRDGRAM_BIN"/xcode-build-env-gen-app-version-build`"
+
 export SCHEME_NAME="$SCHEME_NAME"
 export SCHEME_PREFIX="$SCHEME_PREFIX"
 export SCHEME_SUFFIX="$SCHEME_SUFFIX"
@@ -19,7 +26,7 @@ export APP_BUNDLE_ID="app.birdgram.$APP_BUNDLE_ID_NAME" # Required (for bin/xcod
 export APP_BUNDLE_URL_SCHEME="$APP_BUNDLE_ID_NAME"
 
 # TODO Add this to LaunchScreen.template.xib
-# - Tried briefly and quit -- need to figure out how to add constraints to the new label
+# - Tried briefly and quit [wip: can add new subtitle label below title label, but then how to add positioning constraints?]
 if [ "$CONFIGURATION" -ne 'Debug' ]; then
   export LAUNCH_SCREEN_DEBUG=""
 else
